Rename: propice -> openprs everywhere Install all genom includes into includedir/genom Put tcl and openprs client into server/tcl and server/openprs
Minor fixes to the build system:
    - remove TOPBUILD and use autoconf-provided topbuilddir instead
    - rename topbuild into topbuilddir for the sake of consistency
    - use the autoconf-provided INSTALL:
        * use cmp in the Makefile where it is needed
        * make the dirs explicitely (added mkinstalldirs for that)

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,6 +1,6 @@
 1999-09-24  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceDecodeGen.c: Fix a bug in enum decodage where we returned 
+	* openprsDecodeGen.c: Fix a bug in enum decodage where we returned 
 	FALSE instead of a real Term.
 
 1999-09-21  Francois Felix Ingrand  <felix@laas.fr>
@@ -10,21 +10,21 @@
 
 1999-09-17  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceGen.c: Added ABORT request and the symbol and op declarations.
-	* propiceGen.c: Added ASYNC OP symbol declarations.
+	* openprsGen.c: Added ABORT request and the symbol and op declarations.
+	* openprsGen.c: Added ASYNC OP symbol declarations.
 
 1999-09-02  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceGen.c: Fixed a pb with type name not properly written
+	* openprsGen.c: Fixed a pb with type name not properly written
 	(unsigned int, instead of unsigned_int).
 
 1999-07-20  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceEncodeGen.c: An update missing in this file.
+	* openprsEncodeGen.c: An update missing in this file.
 
 1999-07-19  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceGen.c: Cast the encode/decode functions to avoid warning.
+	* openprsGen.c: Cast the encode/decode functions to avoid warning.
 
 1999-07-07  Francois Felix Ingrand  <felix@laas.fr>
 
@@ -33,44 +33,44 @@
 
 1999-07-03  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceGen.c: Declare functional fact 0, not 1.
+	* openprsGen.c: Declare functional fact 0, not 1.
 
 1999-06-28  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceGen.c (declarePosters): Uppercase the poster components
+	* openprsGen.c (declarePosters): Uppercase the poster components
 	name, and fixed some name problems.
 
 1999-06-25  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceGen.c: Added function for encode/decode posters and their 
+	* openprsGen.c: Added function for encode/decode posters and their 
 	components.
 
 1999-06-24  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceOpGen.c: Keep output if applicable, and remove NIL inputs 
+	* openprsOpGen.c: Keep output if applicable, and remove NIL inputs 
 	arg grom the invocation part.
 
 1999-06-23  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceDecodeGen.c: Added the size of the string.
+	* openprsDecodeGen.c: Added the size of the string.
 
-	* propiceEncodeGen.c (genEncodeEnum): We must take the element
+	* openprsEncodeGen.c (genEncodeEnum): We must take the element
 	elt+1 from the Term_Comp.
 
-	* parser.y: Added a $genPropice var in the perl script.
+	* parser.y: Added a $genOpenprs var in the perl script.
 
 1999-06-22  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceGen.c: Encode a la place de la fonction de decode...
+	* openprsGen.c: Encode a la place de la fonction de decode...
 
 1999-06-15  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceMakeGen.c: Added propice/Makefile.protos
+	* openprsMakeGen.c: Added openprs/Makefile.protos
 
-	* propiceGen.c: Un arg de trop au format.
+	* openprsGen.c: Un arg de trop au format.
 
 1999-06-10  Francois Felix Ingrand  <felix@laas.fr>
 
-	* propiceOpGen.c (propiceOpGen): When no INPUTS, put nil.
-	(propiceOpGen): OUTPUTS, idem.
+	* openprsOpGen.c (openprsOpGen): When no INPUTS, put nil.
+	(openprsOpGen): OUTPUTS, idem.
 
