--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-25  Francois Felix Ingrand  <felix@laas.fr>
+
+	* parser.y (main): Added $moduleOprs variable for the name of the module-oprs.pc file...
+
 1999-09-24  Francois Felix Ingrand  <felix@laas.fr>
 
 	* openprsDecodeGen.c: Fix a bug in enum decodage where we returned 
