--- a/doc/user_guide/tex/genom-codels.tex
+++ b/doc/user_guide/tex/genom-codels.tex
@@ -877,7 +877,7 @@ synchronize, or exchange  data.   Those cases are  to  be handled  by the
 codels.
 
 To  do so, it is  possible to use {\em  activity  ids}: each eactivity is
-identified be a number between  $0$ and {\tt MAX\_ACTIVITIES}$-1$. From a
+identified by a number between  $0$ and {\tt MAX\_ACTIVITIES}$-1$. From a
 codel,   the current  activity number  is    returned by the  macro  {\tt
 CURRENT\_ACTIVITY\_NUM}.
 
