--- a/doc/user_guide/tex/genom-module.tex
+++ b/doc/user_guide/tex/genom-module.tex
@@ -150,7 +150,8 @@ Your own code is executed by the execution(s) task(s).
 If  this code is to  be periodical (servoing,  monitoring, filters, ...),
 you will have to use a periodical  execution task and specify its period.
 It   is  also  possible   to use   a-periodical  tasks  and  a  sequential
-scheduling. Tasks are  given priorities (for  VxWorks only at this time),
+scheduling. Tasks are  given priorities (supported under VxWorks only
+at this time),
 depending on their constrains in terms of resources and CPU requirements.
 
 In the  {\tt  demo} example,  there were  only one  execution  task ({\tt
