Add back a date to help keeping track of printed versions

--- a/doc/user_guide/genom.tex
+++ b/doc/user_guide/genom.tex
@@ -55,7 +55,7 @@ LAAS-CNRS\\
 31077 Toulouse Cedex 4 - France\\
 {sara,matthieu,mallet}@laas.fr}
 
-\date{}
+\date{January 2006}
 
 \begin{document}
 
