--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 $LAAS$
   
+ 32. Rename TCLSERVMODULEPATH environment variable to TCLSERV_MODULE_PATH
+     and allow definition of a colon-separated list of paths.
+ 31. Add 'extern "C"' declaration for user codels prototypes in header.h.
  30. Add preliminary Xenomai 2.x (using the POSIX skin) support.
  29. Disable old RTAI support in autoconf scripts.
  28. Update killmodule script for new SIGTERM behaviour.
