No more separate *Proto.h

--- a/doc/user_guide/tex/genom-anx-files.tex
+++ b/doc/user_guide/tex/genom-anx-files.tex
@@ -57,10 +57,10 @@ in the codels}). \\
  \hline
  \multicolumn{2}{|l|}{Client side: } \\
  \hline
- {\tt demoMsgLib.\{c,h,Proto.h\}}  &  Requests libraries. \\
+ {\tt demoMsgLib.[ch]}  &  Requests libraries. \\
  {\tt demoConnectLib.c}  &  Smaller version of the library {\tt
 demoMsgLib.c}: use this if you use {\tt csLib} directly. \\
- {\tt demoPosterLib.\{c,h,Proto.h\}}  &  Posters libraries.\\
+ {\tt demoPosterLib.[ch]}  &  Posters libraries.\\
  {\tt demoError.h}  &  Error codes (reports).\\
  \hline
  \multicolumn{2}{l}{} \\
@@ -69,8 +69,8 @@ demoMsgLib.c}: use this if you use {\tt csLib} directly. \\
  \multicolumn{2}{|l|}{Test program:} \\
  \hline
  {\tt demoTest.c}  &  interactive test program\\
- {\tt demoScan.\{c,h\}}  &  interactive  scan of input structures\\
- {\tt demoPrint.\{c,h\}}  &  display the C structures of the module\\
+ {\tt demoScan.[ch]}  &  interactive  scan of input structures\\
+ {\tt demoPrint.[ch]}  &  display the C structures of the module\\
  \hline
  \multicolumn{2}{l}{} \\
 
