--- a/doc/user_guide/tex/genom-using.tex
+++ b/doc/user_guide/tex/genom-using.tex
@@ -192,7 +192,7 @@ i.} the name  of  the module, {\em ii.}   the  name of the  poster  ({\tt
 Cntrl} for the control poster), {\em  iii.}  the sub-structure name (when
 a subpart of the poster is addressed instead of  its whole) and {\em iv.}
 the suffix {\tt PosterRead} or {\tt PosterShow}.   These functions can be
-found in the header {\tt demoPosterLibProto.h}.
+found in the header {\tt demoPosterLib.h}.
 
 
 \subsubsection{Third step: compilation}
@@ -336,7 +336,7 @@ state is particularly well suited).
 \end{itemize}
 
 The prototypes  of  these  functions  are defined   in the  header   {\tt
-auto/demoMsgLibProto.h}. Generic functions  (as for posters) also exists,
+auto/demoMsgLib.h}. Generic functions  (as for posters) also exists,
 and are documented in the sections below).
 
 \subsection{An example}
